fixes for jdk11